Replacing unneccessairy class with functions, fixing the bug that caused user data to not load correctly. Adding polyfills to make the app work on IE11 (poblems with fetch and promise). Adding class to fix the history images positioning.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,14 +6,16 @@
   margin-bottom: 8px;
 }
 
-.gh-username img{
+.gh-username img {
   width: 32px;
 }
 
-#profile-bio{
-  margin-top:10px;
+#profile-bio {
+  margin-top: 10px;
 }
 
-.timeline .timeline-item {
-  padding-bottom:1em;
+.timeline {
+  &-item {
+    padding-bottom: 1em;
+  }
 }
